--- a/Presentation.tex
+++ b/Presentation.tex
@@ -455,7 +455,7 @@
 		\item Inexpensive 8-bit microcontroller with Pulse Width Modulation (PWM) analog outputs.
 		\item Fast switching of digital signal results with analog signal.
 		\item Analog signal depended on duty-cycle: $V(t) =  \frac{V_d}{100}\cdot D(t)$.
-		\item Modulation limited by bit-rate and clock frequency: $f_{PWM} \approx 500[Hz]$.
+		\item Modulation limited by clock frequency: $f_{PWM} \approx 500[Hz]$.
 	\end{itemize}
 \end{frame}
 
