--- a/Presentation.tex
+++ b/Presentation.tex
@@ -465,10 +465,11 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{duty_cycle.png}
 	\end{center}
 	\begin{itemize}		
-		\item Circuit composed of a high power blue LED with modulated by PWM pins.
-		\item LED has an approximately linear response which minimizes the overshoot.
-		\item fast PWM frequency minimizes the phase delay.
+		\item High power blue LED modulated by PWM pins.
 		\item $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $
+		\item Response approximately linear; minimizing overshoot.
+		\item Fast PWM frequency minimizes the phase delay.
+		
 	\end{itemize}
 \end{frame}
 
