--- a/Presentation.tex
+++ b/Presentation.tex
@@ -475,10 +475,18 @@
 
 
 
-
-
-
-
+\begin{frame}{LED circuit}
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{measured oscillation angle.png}
+	\end{center}
+	\begin{itemize}		
+		\item Damping is amplitude depended; accelerates as amplitude gets smaller.
+		\item Damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
+		\item PID is able to damp up to an amplitude of $\theta_{max}^{PID}= 0.05[\mu rad]$ with an (RMS) amplitude kept by the PID over time of $\overline{\theta_{max}^{PID}} = 0.2 [\mu rad]$
+		
+		
+	\end{itemize}
+\end{frame}
 
 
 
