--- a/Presentation.tex
+++ b/Presentation.tex
@@ -480,7 +480,7 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{measured oscillation angle.png}
 	\end{center}
 	\begin{itemize}		
-		\item Damping is amplitude depended; accelerates as amplitude gets smaller.
+		\item Amplitude-depended damping; accelerates as amplitude decreases.
 		\item Damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
 		\item PID is able to damp up to an amplitude of $\theta_{max}^{PID}= 0.05[\mu rad]$ with an (RMS) amplitude kept by the PID over time of $\overline{\theta_{max}^{PID}} = 0.2 [\mu rad]$
 		
