--- a/Presentation.tex
+++ b/Presentation.tex
@@ -482,7 +482,8 @@
 	\begin{itemize}		
 		\item Amplitude-depended damping; accelerates as amplitude decreases.
 		\item Damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
-		\item PID is able to damp up to an amplitude of $\theta_{max}^{PID}= 0.05[\mu rad]$ with an (RMS) amplitude kept by the PID over time of $\overline{\theta_{max}^{PID}} = 0.2 [\mu rad]$
+		\item PID is able to damp up to an amplitude of $0.05[\mu rad]$.
+		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$.
 		
 		
 	\end{itemize}
