--- a/Presentation.tex
+++ b/Presentation.tex
@@ -479,11 +479,11 @@
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{measured oscillation angle.png}
 	\end{center}
-	\begin{itemize}		
-		\item Amplitude-depended damping; accelerates as amplitude decreases.
-		\item Damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
+	\begin{itemize}	
 		\item PID is able to damp up to an amplitude of $0.05[\mu rad]$.
-		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$.
+		\item RMS amplitude kept by the PID over time of $ 0.2 [\mu rad]$.	
+		\item Amplitude-depended damping; damping time of $3700[s]$ for $ 60 [\mu rad] \rightarrow 10[\mu rad] $, compared to $250[s]$ to reach $ 0.2[\mu rad]$.
+		
 		
 		
 	\end{itemize}
