--- a/Presentation.tex
+++ b/Presentation.tex
@@ -492,8 +492,8 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
-		\item Quality factor is a parameter describing how damped the oscillator.
-		\item Ratio of the maximum energy stored to the energy dissipated per cycle.
+		\item Quality factor describes how damped the oscillator.
+		\item Ratio of the energy stored to dissipated per cycle.
 		\item The difference of PID work and coupled environment noise power.
 		\item when $Q<0$; coupled noise larger than damping, causing a driven oscillator.
 						
