--- a/Presentation.tex
+++ b/Presentation.tex
@@ -494,7 +494,7 @@
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
 		\item Ratio of the energy stored to dissipated per cycle.
-		\item The difference of PID work and coupled environment noise power.
+		\item Energy dissipated is the difference of PID work and coupled noise power.
 		\item when $Q<0$; coupled noise larger than damping, causing a driven oscillator.
 						
 	\end{itemize}
