--- a/Presentation.tex
+++ b/Presentation.tex
@@ -494,7 +494,7 @@
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
 		\item Ratio of the energy stored to dissipated per cycle.
-		\item $Q(\theta_{max},p)  =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $
+		\item Factor is noise and amplitude depended: $Q(\theta_{max},p)  =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $
 		\item Energy dissipated is the difference of PID work and coupled noise power.
 		\item when $Q<0$; coupled noise larger than damping, causing a driven oscillator.
 						
