--- a/Presentation.tex
+++ b/Presentation.tex
@@ -494,9 +494,9 @@
 	\begin{itemize}	
 		\item Quality factor describes how damped the oscillator.
 		\item Ratio of the energy stored to dissipated per cycle.
-		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $
+		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $.
 		\item When $Q<0$; coupled noise larger than damping, causing a driven oscillator.
-		\item Coupled noise estimation from the measured damped amplitude: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
+		\item Coupled noise estimation from the measurement: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
 	\end{itemize}
 \end{frame}
 
