--- a/Presentation.tex
+++ b/Presentation.tex
@@ -496,7 +496,7 @@
 		\item Ratio of the energy stored to dissipated per cycle.
 		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $.
 		\item When $Q<0$; coupled noise larger than damping.
-		\item Coupled noise estimation from measurement: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
+		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
 	\end{itemize}
 \end{frame}
 
