--- a/Presentation.tex
+++ b/Presentation.tex
@@ -249,6 +249,10 @@
 \end{frame}
 % frame 6
 \begin{frame}{\hypertarget{frame:Radiation tourqe}{Radiation tourqe}}
+	\begin{center}		
+		\includegraphics[width=0.6\textwidth,keepaspectratio]{radiation.PNG}
+    \end{center}
+
 	
 	\begin{itemize}		
 		
@@ -265,11 +269,11 @@
 % frame 1
 \begin{frame}{Experiment noises}
 	\begin{center}		
-		\includegraphics[width=0.3\textwidth,keepaspectratio]{actual system_crop.jpg}
+		\includegraphics[width=0.3\textwidth,keepaspectratio]{pendulum_front.png}
     \end{center}
 	\begin{itemize}
 		
-		\item Angle measurement is optical with a front mirror.
+		\item Angle measurement is optical by a front mirror.
 		\item Fundamental limits are: thermal uncertainty, shot noise. 
 		\pause
 		\item Reducing the uncertainty $\delta\theta$ enables higher sensitivity.
@@ -291,8 +295,10 @@
 \end{frame}
 
 \begin{frame}{\hypertarget{frame:Gravimetric measurement}{Gravitational measurement}}
+	\begin{center}		
+		\includegraphics[width=0.3\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+    \end{center}
 	\begin{itemize}
-		
 		
 		\pause
 		\item Introducing a new mass adds a constant new torque $\tau_g$. 
@@ -437,7 +443,7 @@
 
 \begin{frame}{Light emitting diode (LED)}
 	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{aom.png}
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{FOV.jpg}
 	\end{center}
 	\begin{itemize}		
 		\item Light source with high power and long lifetime.
@@ -466,7 +472,7 @@
 	\end{center}
 	\begin{itemize}		
 		\item High power blue LED modulated by PWM pins.
-		\item $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $
+		\item Net tourqe: $\tau_{PID}(t)  \approx   3\cdot 10^{-13}(D_1(t) -D_2(t)) $
 		\item Response approximately linear; minimizing overshoot.
 		\item Fast PWM frequency minimizes the phase delay.
 		
@@ -500,9 +506,25 @@
 	\end{itemize}
 \end{frame}
 
+\begin{frame}{Brownian motion}
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
+	\end{center}
+	\begin{itemize}	
+		\item Quality factor describes how damped the oscillator.
+		\item Ratio of the energy stored to dissipated per cycle.
+		\item Noise and amplitude depended: $Q =  \frac{\pi\kappa\theta_{max}^2}{T\cdot(\frac{\theta_{max}\pi\tau_{max}}{T} -p)} $.
+		\item When $Q<0$; coupled noise larger than damping.
+		\item Measurement coupled noise estimation: $p \rightarrow \frac{ \theta_{max}^{PID}\pi\tau_{max}}{T}$. 				
+	\end{itemize}
+\end{frame}
 
-
-
+\subsection{Noise power}
+Due to Brownian motion, we estimate $n_p= \frac{N}{V}v A$ gas particles collisions per second into the cross section of the torsional pendulum. Each gas particle is with mass $m_0 = \frac{M}{N_A}$ and mean velosity of the gas flow $v$ (eq.~\ref{eqn:flow velocity}). Assuming all collisions are elastic, the particles exchange mean momentum of $k=2m_0v$, resulting in a force $F = n_p\cdot k$. Due to the collisions, the velosity of the torsional pendulum with mass $m_1$ is $ u =\frac{ n_p k}{m_1}$, resulting in a power, $p$, given by:
+\begin{equation}
+p = F\cdot u =  n_p k \cdot n_p\frac{k}{m_1} =\frac{4}{m_1}(\frac{N}{V}v A)^2m_0^2v^2=\frac{4A^2}{m_1}(\frac{P}{k_B T})^2(\frac{M}{N_A})^2 (\frac{3 k_B N_A T}{M})^2 =\frac{36A^2P^2}{m_1} 
+\label{eqn:Brownian power}
+\end{equation}
 
 
 
