--- a/Presentation.tex
+++ b/Presentation.tex
@@ -448,7 +448,7 @@
 	\begin{itemize}		
 		\item Light source with high power and long lifetime.
 		\item LED can be modulated up to $100MHz$ (electrons' lifetime).
-		\item Illumination angle of $45^0-120^0$ and hard to focus.
+		\item Illumination angle of $45^0-120^0$ making it hard to focus.
 		\item The LED light sources are coupled into light guides.
 	\end{itemize}
 \end{frame}
