--- a/Presentation.tex
+++ b/Presentation.tex
@@ -511,7 +511,7 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
-		\item Estimated noise much smaller than each of previously calculated noises.
+		\item Estimated noise smaller than previously calculated noises (Brownian motion, acoustic waves, thermal flow, black body radiation).
 		\item Only net collision power affects the motion uncertainty.
 		\item Noise power composed of Brownian motion, acoustic waves and black body radiation. 
 		\item Brownian motion and black body radiation are both treated as random particle collision processes. 
