--- a/Presentation.tex
+++ b/Presentation.tex
@@ -511,9 +511,9 @@
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
-		\item Estimated noise smaller than previously calculated noises (Brownian motion, acoustic waves, thermal flow, black body radiation).
+		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
-		\item Noise power composed of Brownian motion, acoustic waves and black body radiation. 
+		\item Noise power composed only of Brownian motion, acoustic waves and black body radiation. 
 		\item Brownian motion and black body radiation are both treated as random particle collision processes. 
 		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$. 				
 	\end{itemize}
