--- a/Presentation.tex
+++ b/Presentation.tex
@@ -513,8 +513,8 @@
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
-		\item Noise power composed only of Brownian motion, acoustic waves and black body radiation. 
-		\item Brownian motion and black body radiation are both treated as random particle collision processes. 
+		\item Brownian motion and black body radiation are both treated as random particle collision processes.
+		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$. 				
 	\end{itemize}
 \end{frame}
