--- a/Presentation.tex
+++ b/Presentation.tex
@@ -506,19 +506,26 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Brownian motion}
+\begin{frame}{Effective power}
 	\begin{center}		
 		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
 	\end{center}
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
-		\item Brownian motion and black body radiation are both treated as random particle collision processes.
+		\item Brownian motion and black body radiation are both treated as Poissonian particle collision processes ($\sqrt{N}$).
 		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
+					
+	\end{itemize}
+\end{frame}
+\begin{frame}{Brownian motion}
+	\begin{center}		
+		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
+	\end{center}
+	\begin{itemize}	 
 		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$. 				
 	\end{itemize}
 \end{frame}
-
 
 
 \section{Summary and conclusion}
