--- a/Presentation.tex
+++ b/Presentation.tex
@@ -507,26 +507,31 @@
 \end{frame}
 
 \begin{frame}{Effective power}
-	\begin{center}		
-		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
-	\end{center}
+	
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
-		\item Brownian motion and black body radiation are both treated as Poissonian particle collision processes ($\sqrt{N}$).
+		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
 					
 	\end{itemize}
 \end{frame}
-\begin{frame}{Brownian motion}
-	\begin{center}		
-		\includegraphics[width=0.5\textwidth,keepaspectratio]{Q factor.png}
-	\end{center}
+\begin{frame}{Damped angle}
+	
 	\begin{itemize}	 
-		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$. 				
+		\item Damping is limited by Brownian motion $p\approx 10^{-25}  [W]$.
+		\item Damping process can damp down up to $\theta_{max}^{PID}\approx 2\cdot 10^{-14}$
+		\item That is achieved when damping process lowers the pendulum's temperature.  				
 	\end{itemize}
 \end{frame}
-
+\begin{frame}{Damped angle}
+	
+	\begin{itemize}	 
+		\item Gravimetric measurement is conducted by measuring the equilibrium angle.
+		\item Damping lowers the measurement temperature quantum uncertainty.
+		\item Resolution limit is proportional to the damped amplitude. 				
+	\end{itemize}
+\end{frame}
 
 \section{Summary and conclusion}
 \begin{frame}{Study achievements}
