--- a/Presentation.tex
+++ b/Presentation.tex
@@ -516,13 +516,24 @@
 	\end{itemize}
 \end{frame}
 
-\begin{frame}{Effective power}
+\begin{frame}{Effective noise}
 	
 	\begin{itemize}	
 		\item Estimated noise smaller than calculated noises (Brownian motion, acoustic waves, thermal flow, black body).
 		\item Only net collision power affects the motion uncertainty.
 		\item Brownian motion and black body radiation are both treated as random particle collision processes ($\sqrt{N}$).
 		\item Noise power composed only of net Brownian motion, net black body radiation and acoustic waves.  	 
+					
+	\end{itemize}
+\end{frame}
+
+\begin{frame}{Effective noise}
+	\framesubtitle{Calculated noises}
+	\begin{itemize}	
+		\item Thermal flow: $p=0.083[W]$.
+		\item Black body radiation: $p=0.121[W]$.
+		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
+		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
 					
 	\end{itemize}
 \end{frame}
