--- a/Presentation.tex
+++ b/Presentation.tex
@@ -534,6 +534,8 @@
 		\item Black body radiation: $p=0.121[W]$.
 		\item Brownian motion: $p=6.2\cdot 10^{-6}[W]$.
 		\item Acoustic waves: $p=1.1\cdot 10^{-28}[W]$.
+		\pause
+		\item Estimated noise: $p=7\cdot 10^{-19}[W]$.
 					
 	\end{itemize}
 \end{frame}
