--- a/Presentation.tex
+++ b/Presentation.tex
@@ -44,6 +44,27 @@
 	\typesetFrontSlides
 
 % Your Slides Start here:
+\section{Introduction}
+
+% frame 1
+\begin{frame}{Harmonic oscillator}
+	\begin{center}		
+		\includegraphics[width=0.4\textwidth,keepaspectratio]{torsion_pendulum_powerpoint.jpg}
+    \end{center}
+	\begin{itemize}
+
+		\item Gravitational field is hard to mask and can not be shielded.
+		\item Since the gravitational constant is small, the force is weak.
+		\item Gravimetry is used widely to exam mass distributions or measure gravitational fields.
+		\item Many gravimetric methods rely on the Cavendish experiment, which has precision and accuracy limitations.
+		\item Significant effort has been undertaken to improve the measurement accuracy,
+	\end{itemize}
+\end{frame}
+
+
+
+
+
 \section{Theoretical background}
 \subsection{Torsional pendulum}
 % frame 1
