--- a/Presentation.tex
+++ b/Presentation.tex
@@ -47,7 +47,7 @@
 \section{Introduction}
 
 % frame 1
-\begin{frame}{Harmonic oscillator}
+\begin{frame}{Gravitational field}
 	\begin{center}		
 		\includegraphics[width=0.4\textwidth,keepaspectratio]{torsion_pendulum_powerpoint.jpg}
     \end{center}
@@ -55,7 +55,7 @@
 
 		\item Gravitational field is hard to mask and can not be shielded.
 		\item Since the gravitational constant is small, the force is weak.
-		\item Gravimetry is used widely to exam mass distributions or measure gravitational fields.
+		\item Gravimetry is widely used, such as to exam mass distributions, measure gravitational fields and temporal geological shifts.
 		\item Many gravimetric methods rely on the Cavendish experiment, which has precision and accuracy limitations.
 		\item Significant effort has been undertaken to improve the measurement accuracy,
 	\end{itemize}
