--- a/Presentation.tex
+++ b/Presentation.tex
@@ -48,20 +48,27 @@
 
 % frame 1
 \begin{frame}{Gravitational field}
-	\begin{center}		
-		\includegraphics[width=0.4\textwidth,keepaspectratio]{torsion_pendulum_powerpoint.jpg}
-    \end{center}
+	
 	\begin{itemize}
 
 		\item Gravitational field is hard to mask and can not be shielded.
 		\item Since the gravitational constant is small, the force is weak.
-		\item Gravimetry is widely used, such as to exam mass distributions, measure gravitational fields and temporal geological shifts.
-		\item Many gravimetric methods rely on the Cavendish experiment, which has precision and accuracy limitations.
-		\item Significant effort has been undertaken to improve the measurement accuracy,
+		\item Gravimetry is widely used, such as to exam mass distributions and measure gravitational fields.
+		\item Many gravimetric methods rely on the Cavendish experiment; which has precision and accuracy limitations.
+		\item Significant effort has been undertaken to improve the measurement accuracy.
 	\end{itemize}
 \end{frame}
+\begin{frame}{Gravimetric measurements}
+	
+	\begin{itemize}
 
-
+		\item Interference fringe changes due to the free-fall of a corner cube in a Mach-Zehnder interferometer with sensitivity of 100 nano-g $Hz^{-1/2}$.
+		\item Atomic interferometry achieving a resolution of 100 pico-g after two days of integration.
+		\item Field standard; superconducting sphere suspended in the field of a superconducting coil achieving 3 pico-g resolution after one month integration and 1 pico-g after one year.
+		\item The most sensitive device to date; Kasevich's 10 m atom interferometer which achieves 500 femto-g after one hour of integration.
+		
+	\end{itemize}
+\end{frame}
 
 
 
