--- a/Presentation.tex
+++ b/Presentation.tex
@@ -46,26 +46,29 @@
 % Your Slides Start here:
 \section{Introduction}
 
-% frame 1
-\begin{frame}{Gravitational field}
-	
-	\begin{itemize}
 
-		\item Gravitational field is hard to mask and can not be shielded.
+
+\subsection{Gravity measurement}
+% frame 1
+\begin{frame}{\hypertarget{frame:Gravitational field}{Gravitational field}}
+	\begin{center}		
+		\includegraphics[width=0.3\textwidth,keepaspectratio]{gravity.png}
+    \end{center}
+	\begin{itemize}
+		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
 		\item Since the gravitational constant is small, the force is weak.
-		\item Gravimetry is widely used, such as to exam mass distributions and measure gravitational fields.
-		\item Many gravimetric methods rely on the Cavendish experiment; which has precision and accuracy limitations.
-		\item Significant effort has been undertaken to improve the measurement accuracy.
-	\end{itemize}
+		\item Many gravimetric methods rely on the Cavendish experiment; using a pendulum.
+		\item High sensitivity is a significant challenge with low frequency gravimetric sensing.
+		\end{itemize}
 \end{frame}
+
 \begin{frame}{Gravimetric measurements}
 	
 	\begin{itemize}
 
-		\item Interference fringe changes due to the free-fall of a corner cube in a Mach-Zehnder interferometer with sensitivity of 100 nano-g $Hz^{-1/2}$.
-		\item Atomic interferometry achieving a resolution of 100 pico-g after two days of integration.
-		\item Field standard; superconducting sphere suspended in the field of a superconducting coil achieving 3 pico-g resolution after one month integration and 1 pico-g after one year.
-		\item The most sensitive device to date; Kasevich's 10 m atom interferometer which achieves 500 femto-g after one hour of integration.
+		\item Interference fringe changes with sensitivity of 100 nano-g $Hz^{-1/2}$.
+		\item Atomic interferometry with sensitivity of of 100 pico-g after two days of integration.
+		\item Atom interferometer with sensitivity of 500 femto-g after one hour of integration.
 		
 	\end{itemize}
 \end{frame}
@@ -82,7 +85,6 @@
 	\begin{itemize}
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
-		\pause
 		\item Undamped oscillator; harmonic oscillations without decay.
 		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$.
 		
@@ -120,18 +122,6 @@
 \end{frame}
 
 
-\subsection{Gravity measurement}
-% frame 1
-\begin{frame}{\hypertarget{frame:Gravitational field}{Gravitational field}}
-	\begin{center}		
-		\includegraphics[width=0.3\textwidth,keepaspectratio]{gravity.png}
-    \end{center}
-	\begin{itemize}
-		\item Newton's law of universal gravitation: $\overrightarrow{F} = \frac{GMm}{r^2}\hat{r}$
-		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ 
-		\item Since the gravitational constant is small, the force is weak.
-		\end{itemize}
-\end{frame}
 % frame 2
 \begin{frame}{Cavendish apparatus}
 	\begin{center}		
@@ -190,18 +180,7 @@
 	\hyperlink{frame:Gravimetric sensing}{>>} 
 
 \end{frame}
-% frame 6
-\begin{frame}{\hypertarget{frame:Gravimetric sensing}{Gravimetric sensing}}
-	
-	\begin{itemize}
-		\item Time integration reduces measurement noises. 
-		\item SNR is the limiting factor for the measurement sensitivity.		
-		\pause
-		\item Integration at high frequencies is faster with better SNR.
-		\item SNR frequency dependency is a significant challenge with low frequency gravimetric sensing.
 
-	\end{itemize}
-\end{frame}
 
 
 \subsection{Noises and damping}
