--- a/Presentation.tex
+++ b/Presentation.tex
@@ -86,8 +86,7 @@
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\item Undamped oscillator; harmonic oscillations without decay.
-		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$.
-		\item Damped motion; underdamped, critically damped and overdamped.
+		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$; underdamped, critically damped and overdamped.
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 		
 	\end{itemize}
@@ -106,7 +105,7 @@
 		\item Critically damped; exponential decay to equilibrium.
 		\item Overdamped; exponential decay with longer damping time. 		
 	\end{itemize}
-	\hyperlink{frame:Harmonic oscillator}{>>} 
+	\hyperlink{frame:Harmonic oscillator}{<<} 
 \end{frame}
 
 
