--- a/Presentation.tex
+++ b/Presentation.tex
@@ -86,7 +86,7 @@
 
 		\item Torsional pendulum is an angular harmonic oscillator with a restoring torque, made of a mass hung by a string. 
 		\item Undamped oscillator; harmonic oscillations without decay.
-		\item Damped oscillator; there is also a damping torque $\tau = -b\dot{\theta}$; underdamped, critically damped and overdamped.
+		\item If there is a damping torque $\tau = -b\dot{\theta}$; underdamped, critically damped and overdamped.
 		\item Driven oscillator; there is also a time-dependent torque $\tau(t)$.
 		
 	\end{itemize}
