--- a/Presentation.tex
+++ b/Presentation.tex
@@ -92,21 +92,7 @@
 	\end{itemize}
 	\hyperlink{frame:Damped oscillator}{>>}
 \end{frame}
-% frame 2
-\begin{frame}{\hypertarget{frame:Damped oscillator}{Damped oscillator}}
 
-	\begin{center}		
-		\includegraphics[width=0.55\textwidth,keepaspectratio]{damp.png}
-    \end{center}
-	\begin{itemize}	
-		\item The damped motion is given by $\ddot{\theta} + 2\xi\omega_0\dot{\theta} + \omega_0^2\theta = 0$.
-		\item The damping ratio, $\xi$, determines the oscillator's motion: underdamped, critically damped or overdamped.
-		\item Underdamped; oscillations amplitude decreases in time.
-		\item Critically damped; exponential decay to equilibrium.
-		\item Overdamped; exponential decay with longer damping time. 		
-	\end{itemize}
-	\hyperlink{frame:Harmonic oscillator}{<<} 
-\end{frame}
 
 
 
@@ -711,5 +697,25 @@
 	\end{thebibliography}
 \end{frame}
 \fi
-%%
+
+
+
+
+
+
+%appendix
+% frame 2
+\begin{frame}{\hypertarget{frame:Damped oscillator}{Damped oscillator}}
+
+	\begin{center}		
+		\includegraphics[width=0.55\textwidth,keepaspectratio]{damp.png}
+    \end{center}
+	\begin{itemize}	
+		\item The damping ratio, $\xi$, determines the oscillator's motion: underdamped, critically damped or overdamped.
+		\item Underdamped; oscillations amplitude decreases in time.
+		\item Critically damped; exponential decay to equilibrium.
+		\item Overdamped; exponential decay with longer damping time. 		
+	\end{itemize}
+	\hyperlink{frame:Harmonic oscillator}{<<} 
+\end{frame}
 \end{document}
