--- a/Presentation.tex
+++ b/Presentation.tex
@@ -48,7 +48,7 @@
 
 
 
-\subsection{Gravity measurement}
+\subsection{Gravimetric measurements}
 % frame 1
 \begin{frame}{\hypertarget{frame:Gravitational field}{Gravitational field}}
 	\begin{center}		
@@ -62,7 +62,7 @@
 		\end{itemize}
 \end{frame}
 
-\begin{frame}{Gravimetric measurements}
+\begin{frame}{Previous achievements}
 	
 	\begin{itemize}
 
@@ -73,11 +73,8 @@
 	\end{itemize}
 \end{frame}
 
-
-
-\section{Theoretical background}
 \subsection{Torsional pendulum}
-% frame 1
+% frame 2
 \begin{frame}{\hypertarget{frame:Harmonic oscillator}{Harmonic oscillator}}
 	\begin{center}		
 		\includegraphics[width=0.55\textwidth,keepaspectratio]{damp.png}
@@ -94,18 +91,15 @@
 \end{frame}
 
 
-
-
-
-% frame 2
+% frame 3
 \begin{frame}{Cavendish apparatus}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
-		\item Cavendish apparatus measures the test mass $M$ gravitational torque using a torsional pendulum.
+		\item Cavendish apparatus measures the gravitational torque of test mass $M$.
 		\pause
-		\item Mass $M$ attracts both masses $m$; creating a net gravitational torque.
+		\item Mass attracts both masses $m$; creating a net torque.
 		\item There are both gravitational torque and a restoring torque.
 		\pause
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
