--- a/Presentation.tex
+++ b/Presentation.tex
@@ -97,7 +97,7 @@
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
 	\begin{itemize}
-		\item Apparatus measures the gravitational torque of test mass $M$.
+		\item Apparatus measures the gravitational torque of test mass.
 		\item Mass attracts both masses $m$; creating a net torque.
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
