--- a/Presentation.tex
+++ b/Presentation.tex
@@ -92,7 +92,7 @@
 
 
 % frame 3
-\begin{frame}{Cavendish apparatus}
+\begin{frame}{\hypertarget{frame:Cavendish apparatus}{Cavendish apparatus}}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
     \end{center}
@@ -104,48 +104,7 @@
 	\end{itemize}
 	\hyperlink{frame:Gravimetric sensing}{>>} 
 \end{frame}
-% frame 3 - skip
-\begin{frame}{Cavendish apparatus}
-	\framesubtitle{Net torque}
-	\begin{center}		
-		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
-    \end{center}
-	\begin{itemize}
-		\item The net gravitational torque is the sum inverse torques, one from each mass: $\tau_g = l \cdot F(r_1) \cdot cos\theta_1 - l \cdot F(r_2) \cdot cos\theta_2$
-		\item If $l<<d,x,r_0$ the net torque can be approximated to: $\tau_g =  \frac{6l^2GmMxd} {r_0^5} = \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
-		\item Where the tilt angle is $\theta_1 \approx \theta_2 \approx \theta$.
-	\end{itemize}
-	\hyperlink{frame:Gravimetric sensing}{>>} 
-\end{frame}
-% frame 4 - skip
-\begin{frame}{Cavendish apparatus}
-	\framesubtitle{Approximation}
-	\begin{center}		
-		\includegraphics[width=0.2\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
-    \end{center}
-	\begin{itemize}
-		\item The net gravitational torque: $\tau_g =  l d GmM(\frac{1}{r_1^3} - \frac{1}{r_2^3})$.
-		\item Defining the function: $h(l) = \frac{1}{(d^2 +(x-l)^2)^{3/2}}$.
-		\item If $l<<d,x,r_0$ approximation: $h(l)-h(-l)\approx h'(0)\cdot 2l = \frac{6lx}{r_0^5}$.
-		\item the net torque is proportional to the difference: $\tau_g = l d GmM[h(l)-h(-l)]\approx \frac{6l^2GmMxd} {r_0^5}$.
-	\end{itemize}
-	\hyperlink{frame:Gravimetric sensing}{>>} 
-\end{frame}
-% frame 5 - skip
-\begin{frame}{Cavendish apparatus}
-	\framesubtitle{Simple harmonic oscillator}
-	\begin{center}		
-		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
-    \end{center}
-	\begin{itemize}
-		\item Assuming no damping force (simple harmonic motion).
-		\item At equilibrium, the torques cancel each other out $\tau_g =  \kappa\theta$.
-		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
-		
-	\end{itemize}
-	\hyperlink{frame:Gravimetric sensing}{>>} 
 
-\end{frame}
 
 
 
@@ -710,3 +669,46 @@
 	\hyperlink{frame:Harmonic oscillator}{<<} 
 \end{frame}
 \end{document}
+
+% frame 3 - skip
+\begin{frame}{Cavendish apparatus}
+	\framesubtitle{Net torque}
+	\begin{center}		
+		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+    \end{center}
+	\begin{itemize}
+		\item The net gravitational torque is the sum inverse torques, one from each mass: $\tau_g = l \cdot F(r_1) \cdot cos\theta_1 - l \cdot F(r_2) \cdot cos\theta_2$
+		\item If $l<<d,x,r_0$ the net torque can be approximated to: $\tau_g =  \frac{6l^2GmMxd} {r_0^5} = \frac{6l^2GmM sin\theta cos\theta}{r_0^3}$
+		\item Where the tilt angle is $\theta_1 \approx \theta_2 \approx \theta$.
+	\end{itemize}
+	\hyperlink{frame:Cavendish apparatus}{<<} 
+\end{frame}
+% frame 4 - skip
+\begin{frame}{Cavendish apparatus}
+	\framesubtitle{Approximation}
+	\begin{center}		
+		\includegraphics[width=0.2\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+    \end{center}
+	\begin{itemize}
+		\item The net gravitational torque: $\tau_g =  l d GmM(\frac{1}{r_1^3} - \frac{1}{r_2^3})$.
+		\item Defining the function: $h(l) = \frac{1}{(d^2 +(x-l)^2)^{3/2}}$.
+		\item If $l<<d,x,r_0$ approximation: $h(l)-h(-l)\approx h'(0)\cdot 2l = \frac{6lx}{r_0^5}$.
+		\item the net torque is proportional to the difference: $\tau_g = l d GmM[h(l)-h(-l)]\approx \frac{6l^2GmMxd} {r_0^5}$.
+	\end{itemize}
+	\hyperlink{frame:Cavendish apparatus}{<<} 
+\end{frame}
+% frame 5 - skip
+\begin{frame}{Cavendish apparatus}
+	\framesubtitle{Simple harmonic oscillator}
+	\begin{center}		
+		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
+    \end{center}
+	\begin{itemize}
+		\item Assuming no damping force (simple harmonic motion).
+		\item At equilibrium, the torques cancel each other out $\tau_g =  \kappa\theta$.
+		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
+		
+	\end{itemize}
+	\hyperlink{frame:Cavendish apparatus}{<<} 
+
+\end{frame}
