--- a/Presentation.tex
+++ b/Presentation.tex
@@ -58,7 +58,7 @@
 		\item The field vectors point towards the mass: $\overrightarrow{g}(M) = \frac{GM}{r^2}\hat{r}$ .
 		\item Since the gravitational constant is small, the force is weak.
 		\item Many gravimetric methods rely on the Cavendish experiment; using a pendulum.
-		\item High sensitivity is a significant challenge with low frequency gravimetric sensing.
+		\item High sensitivity is a significant challenge at low frequencies.
 		\end{itemize}
 \end{frame}
 
