--- a/Presentation.tex
+++ b/Presentation.tex
@@ -102,7 +102,7 @@
 		\item The average equilibrium angle: $\overline{\theta} = \frac{\tau_g}{\kappa} \approx \frac{3GT^2cos\theta sin\theta}{4\pi^2 } \cdot \frac{M}{r_0^3}$.
 
 	\end{itemize}
-	\hyperlink{frame:Gravimetric sensing}{>>} 
+	\hyperlink{frame:Cavendish apparatus 1}{>>} 
 \end{frame}
 
 
@@ -671,7 +671,7 @@
 \end{document}
 
 % frame 3 - skip
-\begin{frame}{Cavendish apparatus}
+\begin{frame}{\hypertarget{frame:Cavendish apparatus 1}{Cavendish apparatus}}
 	\framesubtitle{Net torque}
 	\begin{center}		
 		\includegraphics[width=0.25\textwidth,keepaspectratio]{Cavendish apparatus.PNG}
